--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: sample
+  name: Jeevan
   namespace: default
   labels:
     app: todo
@@ -17,5 +17,5 @@ spec:
     spec:
       containers:
       - name: todo-app-sha256-1
-        image: us-east1-docker.pkg.dev/jenkins-poc-400711/jenkins-repo/todo-app:tagversion
+        image: asia-south1-docker.pkg.dev/inspiring-dryad-400607/mohan/todo-app:tagversion
 
