--- a/service.yaml
+++ b/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: "v1"
 kind: "Service"
 metadata:
-  name: "sample-service"
+  name: "jeevan-service"
   namespace: "default"
   labels:
     app: "todo"
